--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,9 @@ JWT_SECRET=jwt_secret_key_here
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 GOOGLE_REDIRECT_URI=http://localhost:3000/redirect/google
+
+MONGO_EXPRESS_PORT=8081
+MONGO_INITDB_ROOT_USERNAME=rootuser
+MONGO_INITDB_ROOT_PASSWORD=rootpass
+ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
+ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
