--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.6.7",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
