--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "passport-twitter": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
