--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,11 @@ GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 GOOGLE_REDIRECT_URI=http://localhost:3000/redirect/google
 
+MONGO_DB_URI=mongodb://localhost:27017/
+MONGO_DB_NAME=mongodb
+MONGO_DB_PORT=27017
+MONGO_DB_USER=rootuser
+MONGO_DB_PASS=rootpass
 MONGO_EXPRESS_PORT=8081
 MONGO_INITDB_ROOT_USERNAME=rootuser
 MONGO_INITDB_ROOT_PASSWORD=rootpass
