update env file

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
 PORT=3000
 FRONTEND_LOGIN_SUCCESS_URL=http://localhost:5173/login-success
 FRONTEND_LOGIN_FAILED_URL=http://localhost:5173/login-failed
-JWT_SECRET=jwt_secret_key_here
+COOKIE_SECRET=cookie_secret_here
+JWT_SECRET=jwt_secret_here
+ALLOWED_ORIGINS=http://localhost:5173
 
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
