--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,5 @@
+VITE_USERINFO_API_URL=http://localhost:3000/api/v1/auth/userinfo
+
 -- Google
 VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
 VITE_GOOGLE_REDIRECT_URI=http://localhost:3000/redirect/google
