--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,5 @@
 VITE_USERINFO_API_URL=http://localhost:3000/api/v1/auth/userinfo
+VITE_LOGOUT_API_URL=http://localhost:3000/api/v1/logout
 
 -- Google
 VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
