--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,10 @@ GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 GOOGLE_REDIRECT_URI=http://localhost:3000/redirect/google
 
+GITHUB_CLIENT_ID=your_github_client_id_here
+GITHUB_CLIENT_SECRET=your_github_client_secret_here
+GITHUB_REDIRECT_URI=http://localhost:3000/redirect/github
+
 MONGO_DB_URI=mongodb://localhost:27017/
 MONGO_DB_NAME=mongodb
 MONGO_DB_PORT=27017
