--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,7 @@ VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
 VITE_GOOGLE_REDIRECT_URI=http://localhost:3000/redirect/google
 VITE_GOOGLE_SCOPE=https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile
 VITE_GOOGLE_RESPONSE_TYPE=code
+
+-- Github
+VITE_GITHUB_CLIENT_ID=your_github_client_id_here
+VITE_GITHUB_SCOPE=user:email
